<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdvanceSettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/ten_dp"
        android:paddingRight="@dimen/ten_dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/ten_dp"
            android:background="@color/black_overlay"
            android:padding="@dimen/five_dp"
            android:text="@string/menu_ad_setting" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:text="@string/setting_hint" />

        <Switch
            android:id="@+id/switch_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:text="@string/hint_setting_sw" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:gravity="start"
                android:text="@string/range_100" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.16"
                android:gravity="center"
                android:text="@string/range_200" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.16"
                android:gravity="center"
                android:text="@string/range_300" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.16"
                android:gravity="center"
                android:text="@string/range_400" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:gravity="end"
                android:text="@string/range_500" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/sms_ranger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="500"
            android:min="100" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:text="@string/hint_range" />

        <Switch
            android:id="@+id/switch_sms_sending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:text="@string/hint_send_sms_sw" />

        <Switch
            android:id="@+id/switch_sms_whats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:text="@string/hint_sms_whats" />

        <Switch
            android:id="@+id/switch_whats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:text="@string/hint_whats" />

        <Switch
            android:id="@+id/switch_ask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:text="@string/hint_ask" />

        <Switch
            android:id="@+id/switch_web_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:text="@string/hint_web_sms" />

        <Switch
            android:id="@+id/switch_app_power"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:text="@string/hint_app_power" />

        <!--<Switch
            android:id="@+id/switch_whats_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:text="@string/hint_whats_img" />

        <Switch
            android:id="@+id/switch_whats_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:text="@string/hint_whats_video" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/total_sms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/black_overlay"
                android:gravity="center"
                android:padding="@dimen/five_dp"
                android:text="@string/total_sent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center" />

            <TextView
                android:id="@+id/balance_sms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/black_overlay"
                android:gravity="center"
                android:padding="@dimen/five_dp"
                android:text="@string/balance" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>