<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/ten_dp"
    android:paddingRight="@dimen/ten_dp"
    tools:context=".DashBoardFragment">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ten_dp"
        android:gravity="center"
        android:text="@string/welcome" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
            android:id="@+id/birthday_count"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/five_dp"
            android:layout_marginEnd="@dimen/five_dp"
            app:direction="clockwise" />

        <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
            android:id="@+id/task_count"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/five_dp"
            android:layout_marginStart="@dimen/five_dp"
            android:layout_margin="@dimen/five_dp"
            app:direction="clockwise" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/birth" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/task" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/five_dp"
        android:weightSum="2">

        <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
            android:id="@+id/sms_count"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/five_dp"
            android:layout_marginEnd="@dimen/five_dp"
            app:direction="clockwise" />

        <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
            android:id="@+id/whats_up_count"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/five_dp"
            android:layout_marginStart="@dimen/five_dp"
            app:direction="clockwise" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/sms" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/hint_whats" />

    </LinearLayout>

    <TextView
        android:id="@+id/validity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"
        android:gravity="center"
        android:text="@string/validity" />

    <TextView
        android:id="@+id/customer_care"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/customer_care" />


</LinearLayout>